# cnn-image-classification

./: README.md  dataset.py  inference.py  model.pt  model_architecture  network.py  pyproject.toml  training.py
